--- a/tahi/ct/Makefile
+++ b/tahi/ct/Makefile
@@ -10,7 +10,7 @@ PORTVERSION=	2.1.2
 CATEGORIES=	net ipv6
 MASTER_SITES=	http://www.tahi.org/release/ct/
 
-MAINTAINER=	Yukiyo.Akisada@jp.yokogawa.com
+MAINTAINER=	yanegomi@gmail.com
 COMMENT=	IPv6 Conformance Test Kit
 
 RUN_DEPENDS=	${LOCALBASE}/v6eval/bin/pktbuf:${PORTSDIR}/net/v6eval
