Restrict v6eval to only work on i386
I know it's broken on amd64 somewhere at least and probably not
functional on other platforms, but that's just a WAG.

Signed-off-by: Garrett Cooper <yanegomi@gmail.com>

--- a/tahi/v6eval/Makefile
+++ b/tahi/v6eval/Makefile
@@ -35,6 +35,9 @@ RUN_DEPENDS+=	p5-Digest-MD5>=2.16:${PORTSDIR}/security/p5-Digest-MD5
 EXTRA_PATCHES+=	${FILESDIR}/extra-patch-lib-Cm-CmMain.cc
 .endif
 
+# See the TAHI FAQ -- this only really works on i386
+ONLY_FOR_ARCHS=	i386
+
 post-install:
 	@${CAT} ${PKGMESSAGE}
 
