Run config-recursive before fetch-recursive
This is better for two reasons:
1. I hate babysitting installs.
2. What gets fetched will match my options.

Signed-off-by: Garrett Cooper <yanegomi@gmail.com>

--- a/common/Makefile
+++ b/common/Makefile
@@ -57,6 +57,7 @@ install-ports:
 	cd ${PORTSDIR}/${port}; \
 	if ${MAKE} check-already-installed; then \
 		echo "Building ${port}"; \
+		${MAKE} config-recursive; \
 		${MAKE} fetch-recursive; \
 	fi
 .endfor
