Add common make snippet for setting up rules/variables properly for coverage
Sponsored by: EMC / Isilon Storage Division

--- a/coverage-with-shared-libs-freebsd/Makefile.inc
+++ b/coverage-with-shared-libs-freebsd/Makefile.inc
@@ -6,8 +6,7 @@ CLEANFILES+=	${SOBJS:C/\.o$/.gcda/g} ${SOBJS:C/\.o$/.gcno/g}
 CFLAGS+=	--coverage
 .if ${COMPILER_TYPE} == "clang"
 # XXX: better automate this
-_CLANG_PRIVATE_LIBS!=	clang -print-search-dirs | grep libraries: | sed -e 's,.*=,,' -e 's,:.*,,g'
-LDADD+=		${_CLANG_PRIVATE_LIBS}/lib/freebsd/libclang_rt.profile-x86_64.a
+LDADD+=		/usr/lib/libprofile_rt.a
 .elif ${COMPILER_TYPE} == "gcc"
 # XXX: this should be implied by --coverage according to gcc(1)
 LDADD+=		-lgcov
