Page wrap lcov call and parameterize gcov as GCOV

--- a/coverage-with-shared-libs-freebsd/Makefile
+++ b/coverage-with-shared-libs-freebsd/Makefile
@@ -3,11 +3,16 @@ SUBDIR+=	bin
 
 check:
 
+# Pair your compiler and gcov wisely.
+GCOV?=		gcov
+
 CLEANFILES+=	coverage.info
 
 get-coverage:
 	LD_LIBRARY_PATH=${.OBJDIR}/lib ${.OBJDIR}/bin/foo
-	lcov --capture --directory ${.OBJDIR} --output-file ${.OBJDIR}/coverage.info
+	lcov --gcov-tool ${GCOV} --capture \
+	    --directory ${.OBJDIR} --output-file \
+	    ${.OBJDIR}/coverage.info
 	genhtml ${.OBJDIR}/coverage.info --output-directory output
 
 cleancoverage: .PHONY
