- Use better idioms for clean-coverage - Apply .PHONY to get-coverage as it's not a real target.

--- a/coverage-with-shared-libs-freebsd/Makefile
+++ b/coverage-with-shared-libs-freebsd/Makefile
@@ -3,20 +3,23 @@ SUBDIR+=	bin
 
 check:
 
+CLEANFILES+=	coverage.info
+
+CLEANDIRS+=	output
+
 # Pair your compiler and gcov wisely.
 GCOV?=		gcov
 
-CLEANFILES+=	coverage.info
-
-get-coverage:
+get-coverage: .PHONY
 	LD_LIBRARY_PATH=${.OBJDIR}/lib ${.OBJDIR}/bin/foo
 	lcov --gcov-tool ${GCOV} --capture \
 	    --directory ${.OBJDIR} --output-file \
 	    ${.OBJDIR}/coverage.info
 	genhtml ${.OBJDIR}/coverage.info --output-directory output
 
-cleancoverage: .PHONY
-	rm -Rf ${.OBJDIR}/output
-cleandir: cleancoverage
-
 .include <bsd.subdir.mk>
+
+cleandir: clean-coverage
+clean-coverage: .PHONY
+	rm -Rf ${CLEANDIRS}
+	rm -f ${CLEANFILES}
