Replace all old contact information with corrected contact information
- Replace all instances of my deadname with my online name/handle.
- Remove spam obfuscation.

--- a/tahi/ct/Makefile
+++ b/tahi/ct/Makefile
@@ -10,7 +10,7 @@ PORTVERSION=	2.1.2
 CATEGORIES=	net ipv6
 MASTER_SITES=	http://www.tahi.org/release/ct/
 
-MAINTAINER=	yanegomi@gmail.com
+MAINTAINER=	yaneurabeya@gmail.com
 COMMENT=	IPv6 Conformance Test Kit
 
 RUN_DEPENDS=	${LOCALBASE}/v6eval/bin/pktbuf:${PORTSDIR}/net/v6eval
