--- a/tahi/v6eval-remotes/Makefile
+++ b/tahi/v6eval-remotes/Makefile
@@ -1,6 +1,6 @@
 # New ports collection makefile for:	v6eval-remotes
 # Date created:		Sat Oct  6 14:49:45 PDT 2012
-# Whom:			Garrett Cooper <yanegomi@gmail.com>
+# Whom:			Ngie Cooper <yaneurabeya@gmail.com>
 #
 # $FreeBSD$
 #
@@ -10,7 +10,7 @@ PORTVERSION=	3.0
 CATEGORIES=	net ipv6
 MASTER_SITES=	http://www.tahi.org/release/v6eval/
 
-MAINTAINER=	yanegomi@gmail.com
+MAINTAINER=	yaneurabeya@gmail.com
 COMMENT=	IPv6 Conformance Test Platform
 
 RUN_DEPENDS=	${SITE_PERL}/Expect.pm:${PORTSDIR}/lang/p5-Expect \
