Add an empty set demo

--- a/programming/c++/Makefile
+++ b/programming/c++/Makefile
@@ -1,3 +1,9 @@
+PROGS+=	map_demo
+PROGS+=	set_demo
+
 CXXFLAGS+=	-Wall -Wunused -std=c++11
 
-all: map_demo set_demo
+all: ${PROGS}
+
+clean:
+	rm -f ${PROGS}
