Add a number of basic gtest demos
I will be using these to demonstrate/build googletest support for work
I'm doing for kyua.

--- a/programming/c++/gtest/Makefile
+++ b/programming/c++/gtest/Makefile
@@ -1,12 +1,23 @@
 PROGS+=	expect_nonfatal_failure_demo
+PROGS+=	fixture_fail_demo
+PROGS+=	pass_fail_demo
+PROGS+=	setup_environment_fail_demo
 PROGS+=	skip_demo
+PROGS+=	teardown_environment_fail_demo
 
 CXXFLAGS+=	-Wall -Wunused -std=c++11
 
+ifdef GITDIR
+CXXFLAGS+=	-I${GITDIR}/googlemock/include
+CXXFLAGS+=	-I${GITDIR}/googletest/include
+LDFLAGS+=	-L${GITDIR}/lib
+else
+CXXFLAGS+=	-I/usr/local/include
 LDFLAGS+=	-L/usr/local/lib
+endif
 
-#LDLIBS+=	-lgtest -lgtest_main -lpthread
-LDLIBS+=	-lgtest -lgtest_main
+#LDLIBS+=	-lgtest -lgtest_main
+LDLIBS+=	-lgtest -lgtest_main -lpthread
 
 all: ${PROGS}
 
