Add additional warnings and give the option to parameterize the c++ library
g++ from ports for instance doesn't include -lstdc++ by default, for
instance.

--- a/programming/c++/gtest/Makefile
+++ b/programming/c++/gtest/Makefile
@@ -6,7 +6,10 @@ PROGS+=	setup_environment_fail_demo
 PROGS+=	skip_demo
 PROGS+=	teardown_environment_fail_demo
 
-CXXFLAGS+=	-Wall -Wunused -std=c++11
+CXXFLAGS+=	-Werror -W -Wall -Wunused
+CXXFLAGS+=	-std=c++11
+CXXFLAGS+=	-DGTEST_HAS_PTHREAD=1 -DGTEST_IS_THREADSAFE=1
+CXXFLAGS+=	-DGTEST_LINKED_AS_SHARED_LIBRARY=1
 
 ifdef GITDIR
 CXXFLAGS+=	-I${GITDIR}/googlemock/include
@@ -17,8 +20,10 @@ CXXFLAGS+=	-I/usr/local/include
 LDFLAGS+=	-L/usr/local/lib
 endif
 
+CPP_LIB?=
+
 #LDLIBS+=	-lgtest -lgtest_main
-LDLIBS+=	-lgtest -lgtest_main -lpthread
+LDLIBS+=	-lgtest -lgtest_main -lpthread ${CPP_LIB}
 
 all: ${PROGS}
 
