Allow end-user to specify an alternate C++ library, e.g., -lstdc++

--- a/programming/c++/Makefile
+++ b/programming/c++/Makefile
@@ -5,6 +5,12 @@ PROGS+=	string_trim_demo
 
 CXXFLAGS+=	-g -W -Wall -Wunused -Werror -std=c++11
 
+CPP_LIB?=
+
+ifneq (${CPP_LIB},)
+LDLIBS+=	${CPP_LIB}
+endif
+
 all: ${PROGS}
 
 clean:
