--- a/programming/c++/gtest/Makefile
+++ b/programming/c++/gtest/Makefile
@@ -1,17 +1,22 @@
 PROGS+=	disabled_demo
 PROGS+=	expect_nonfatal_failure_demo
 PROGS+=	fixture_fail_demo
+PROGS+=	parameterized_test_demo
 PROGS+=	pass_fail_demo
 PROGS+=	setup_environment_fatal_fail_demo
 PROGS+=	setup_environment_nonfatal_fail_demo
 PROGS+=	setup_environment_skip_demo
 PROGS+=	skip_demo
 PROGS+=	teardown_environment_fail_demo
+PROGS+=	type_parameterized_test_suite_demo
+PROGS+=	typed_test_suite_demo
 
 CXXFLAGS+=	-Werror -W -Wall -Wunused
 CXXFLAGS+=	-std=c++11
-CXXFLAGS+=	-DGTEST_HAS_PTHREAD=1
-CXXFLAGS+=	-DGTEST_LINKED_AS_SHARED_LIBRARY=1
+CXXFLAGS+=	-DGTEST_HAS_PTHREAD
+CXXFLAGS+=	-DGTEST_LINKED_AS_SHARED_LIBRARY
+CXXFLAGS+=	-DGTEST_HAS_TYPED_TEST
+CXXFLAGS+=	-DGTEST_HAS_TYPED_TEST_P
 
 ifdef GITDIR
 CXXFLAGS+=	-I${GITDIR}/googlemock/include
