Add `CPP_LIB` to the commented out LDLIBS line

--- a/programming/c++/gtest/Makefile
+++ b/programming/c++/gtest/Makefile
@@ -28,7 +28,7 @@ endif
 
 CPP_LIB?=
 
-#LDLIBS+=	-lgtest -lgtest_main
+#LDLIBS+=	-lgtest -lgtest_main ${CPP_LIB}
 LDLIBS+=	-lgtest -lgtest_main -lpthread ${CPP_LIB}
 
 all: ${PROGS}
