Add a demo for getting the time in C++
This little exercise resulted in another "you give a mouse a cookie"
type adventure of epic proportions.

--- a/programming/c++/Makefile
+++ b/programming/c++/Makefile
@@ -2,8 +2,9 @@ PROGS+=	map_demo
 PROGS+=	regex_demo
 PROGS+=	set_demo
 PROGS+=	string_trim_demo
+PROGS+=	time_demo
 
-CXXFLAGS+=	-g -W -Wall -Wunused -Werror -std=c++11
+CXXFLAGS+=	-g -O0 -W -Wall -Wunused -Werror -std=c++20
 
 CPP_LIB?=
 
